@@ -1,3 +1,9 @@
+2007-11-28  Don Porter  <dgp@users.sourceforge.net>
+
+	* unix/tkUnixPort.h:	When unix/configure determines whether the
+	intptr_t type is available, it has the <inttypes.h> header present.
+	It's only fair that we let Tk have it too. 
+
 2007-11-26  Kevin Kenny  <kennykb@acm.org>
 
 	* generic/tkImgPPM.c (StringReadPPM): Corrected a comparison
